build_log_2.txt
[0/2] Re-checking globbed directories...
[1/3] Building CXX object modules/gui/CMakeFiles/gui_basic_window.dir/example/basic_window.cpp.o
FAILED: [code=1] modules/gui/CMakeFiles/gui_basic_window.dir/example/basic_window.cpp.o 
/usr/bin/clang++  -I/home/stevenstarr/Projects/sdk/modules/gui/include -I/home/stevenstarr/Projects/sdk/modules/graphics2d/include -I/home/stevenstarr/Projects/sdk/thirdparty/include -I/home/stevenstarr/Projects/sdk/thirdparty/include/skia -g -std=c++20 -MD -MT modules/gui/CMakeFiles/gui_basic_window.dir/example/basic_window.cpp.o -MF modules/gui/CMakeFiles/gui_basic_window.dir/example/basic_window.cpp.o.d -o modules/gui/CMakeFiles/gui_basic_window.dir/example/basic_window.cpp.o -c /home/stevenstarr/Projects/sdk/modules/gui/example/basic_window.cpp
/home/stevenstarr/Projects/sdk/modules/gui/example/basic_window.cpp:56:20: error: member access into incomplete type 'Ht::HPainter'
   56 |             painter.setPen(pen);
      |                    ^
/home/stevenstarr/Projects/sdk/modules/gui/include/HWindow.h:13:7: note: forward declaration of 'Ht::HPainter'
   13 | class HPainter;
      |       ^
/home/stevenstarr/Projects/sdk/modules/gui/example/basic_window.cpp:57:20: error: member access into incomplete type 'Ht::HPainter'
   57 |             painter.setBrush(Ht::HColor::Transparent());
      |                    ^
/home/stevenstarr/Projects/sdk/modules/gui/include/HWindow.h:13:7: note: forward declaration of 'Ht::HPainter'
   13 | class HPainter;
      |       ^
/home/stevenstarr/Projects/sdk/modules/gui/example/basic_window.cpp:58:20: error: member access into incomplete type 'Ht::HPainter'
   58 |             painter.drawRect(Ht::HRectF(0, 0, (float)width(), (float)height()));
      |                    ^
/home/stevenstarr/Projects/sdk/modules/gui/include/HWindow.h:13:7: note: forward declaration of 'Ht::HPainter'
   13 | class HPainter;
      |       ^
/home/stevenstarr/Projects/sdk/modules/gui/example/basic_window.cpp:58:34: error: no member named 'HRectF' in namespace 'Ht'; did you mean 'HRect'?
   58 |             painter.drawRect(Ht::HRectF(0, 0, (float)width(), (float)height()));
      |                                  ^~~~~~
/home/stevenstarr/Projects/sdk/modules/gui/include/HItem.h:12:7: note: 'HRect' declared here
   12 | class HRect;
      |       ^
4 errors generated.
ninja: build stopped: subcommand failed.
